<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <GridLayout
        android:id="@+id/gridLayoutCampos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/border" >

        <TextView
            android:id="@+id/textViewLatitud"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="1"
            android:text="@string/latitud" />

        <EditText
            android:id="@+id/editTextLatitud"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:ems="6"
            android:hint="@string/latitud"
            android:inputType="numberSigned|numberDecimal"
            android:lines="1"
            android:maxEms="8" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/buttonIr"
            android:layout_width="wrap_content"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:layout_rowSpan="2"
            android:text="@string/verMapa" />

        <TextView
            android:id="@+id/textViewLongitud"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="2"
            android:text="@string/longitud" />

        <EditText
            android:id="@+id/editTextLongitud"
            android:layout_width="160dp"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2"
            android:ems="6"
            android:hint="@string/longitud"
            android:inputType="numberSigned|numberDecimal"
            android:lines="1"
            android:maxEms="8" >

            <requestFocus />
		
        </EditText>

    </GridLayout>

    <fragment
	  	android:id="@+id/map"
	  	android:layout_width="match_parent"
	  	android:layout_height="match_parent"
	  	android:layout_below="@+id/gridLayoutCampos"
	  	android:layout_above="@+id/layoutBotones"
	  	class="com.google.android.gms.maps.MapFragment"
       	android:layout_margin="@dimen/border"/>

    <LinearLayout
        android:id="@+id/layoutBotones"
        android:layout_width="match_parent"
        android:layout_height="@dimen/boxSize"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/border"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonMiPosicion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/miPosicion" />

        <Spinner
            android:id="@+id/spinnerTipoMapa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/tiposMapas" />

        <Button
            android:id="@+id/buttonCasa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/casa"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>